--- a/src/main/resources/first-prototype.fxml
+++ b/src/main/resources/first-prototype.fxml
@@ -367,24 +367,17 @@
                <children>
                   <Group layoutX="14.0" layoutY="14.0">
                      <children>
-                        <TableView fx:id="conferenceEditionMainTable" layoutY="29.0" prefHeight="310.0" prefWidth="997.0">
+                        <TableView fx:id="conferenceEditionMainTable" layoutY="29.0" onMouseClicked="#confEdMainClickItem" prefHeight="310.0" prefWidth="997.0">
                            <columns>
-                              <TableColumn prefWidth="354.0" text="Name" />
-                              <TableColumn minWidth="0.0" prefWidth="89.0" text="Edition" />
-                              <TableColumn prefWidth="553.0" text="Proceeding" />
+                              <TableColumn fx:id="confEdNameColumn" prefWidth="354.0" text="Name" />
+                              <TableColumn fx:id="confEdEditionColumn" minWidth="0.0" prefWidth="89.0" text="Edition" />
+                              <TableColumn fx:id="confEdProceedingColumn" prefWidth="553.0" text="Proceeding" />
                            </columns>
                         </TableView>
-                        <Button fx:id="conferenceEditionDeleteButton" layoutX="141.0" layoutY="341.0" mnemonicParsing="false" prefHeight="25.0" text="Delete Conference" />
+                        <Button fx:id="conferenceEditionDeleteButton" layoutX="141.0" layoutY="341.0" mnemonicParsing="false" onAction="#updateConfEds" prefHeight="25.0" text="Delete Conference" />
                         <TextField fx:id="conferenceEditionSearchField" layoutX="547.0" prefHeight="25.0" prefWidth="450.0" />
                         <Button fx:id="conferenceEditionCreateButton" layoutY="341.0" mnemonicParsing="false" text="Create Conference" />
-                        <Group layoutX="677.0" layoutY="341.0">
-                           <children>
-                              <Button fx:id="conferenceEditionNextPageButton" layoutX="234.0" mnemonicParsing="false" text="Next Page" />
-                              <Button fx:id="conferenceEditionPreviousPageButton" mnemonicParsing="false" text="Previous Page" />
-                              <Label alignment="CENTER" layoutX="112.0" layoutY="5.0" prefHeight="16.0" prefWidth="38.0" text="Page" />
-                              <TextField fx:id="conferenceEditionCurrentPageField" layoutX="154.0" prefHeight="26.0" prefWidth="80.0" text="1" />
-                           </children>
-                        </Group>
+                        <Group layoutX="677.0" layoutY="341.0" />
                      </children>
                   </Group>
                   <Group layoutX="14.0" layoutY="43.0" />
@@ -392,14 +385,14 @@
                      <children>
                         <TextField fx:id="conferenceEditionNameField" layoutY="17.0" prefHeight="25.0" prefWidth="300.0" />
                         <Label text="Name" />
-                        <Button fx:id="conferenceEditionChangeNameButton" layoutX="190.0" layoutY="43.0" mnemonicParsing="false" text="Change Name" />
+                        <Button fx:id="conferenceEditionChangeNameButton" layoutX="190.0" layoutY="43.0" mnemonicParsing="false" onAction="#updateConfEds" text="Change Name" />
                      </children>
                   </Group>
                   <Group layoutX="14.0" layoutY="469.0">
                      <children>
                         <TextField fx:id="conferenceEditionEditionField" layoutY="17.0" prefHeight="25.0" prefWidth="300.0" />
                         <Label text="Edition" />
-                        <Button fx:id="conferenceEditionChangeEditionButton" layoutX="183.0" layoutY="43.0" mnemonicParsing="false" text="Change Edition" />
+                        <Button fx:id="conferenceEditionChangeEditionButton" layoutX="183.0" layoutY="43.0" mnemonicParsing="false" onAction="#updateConfEds" text="Change Edition" />
                      </children>
                   </Group>
                </children>
@@ -412,30 +405,23 @@
                <children>
                   <Group layoutX="14.0" layoutY="14.0">
                      <children>
-                        <TableView fx:id="seriesMainTable" layoutY="29.0" prefHeight="310.0" prefWidth="997.0">
+                        <TableView fx:id="seriesMainTable" layoutY="29.0" onMouseClicked="#seriesMainClickItem" prefHeight="310.0" prefWidth="997.0">
                            <columns>
-                              <TableColumn prefWidth="320.0" text="Name" />
-                              <TableColumn minWidth="0.0" prefWidth="676.0" text="Proceedings" />
+                              <TableColumn fx:id="seriesNameColumn" prefWidth="320.0" text="Name" />
+                              <TableColumn fx:id="seriesProcsColumn" minWidth="0.0" prefWidth="676.0" text="Publications" />
                            </columns>
                         </TableView>
-                        <Button fx:id="seriesDeleteButton" layoutX="107.0" layoutY="341.0" mnemonicParsing="false" prefHeight="25.0" text="Delete Series" />
+                        <Button fx:id="seriesDeleteButton" layoutX="107.0" layoutY="341.0" mnemonicParsing="false" onAction="#updateSeries" prefHeight="25.0" text="Delete Series" />
                         <TextField fx:id="seriesSearchField" layoutX="547.0" prefHeight="25.0" prefWidth="450.0" />
                         <Button fx:id="seriesCreateButton" layoutY="341.0" mnemonicParsing="false" text="Create Series" />
-                        <Group layoutX="677.0" layoutY="341.0">
-                           <children>
-                              <Button fx:id="seriesNextPageButton" layoutX="234.0" mnemonicParsing="false" text="Next Page" />
-                              <Button fx:id="seriesPreviousPageButton" mnemonicParsing="false" text="Previous Page" />
-                              <Label alignment="CENTER" layoutX="112.0" layoutY="5.0" prefHeight="16.0" prefWidth="38.0" text="Page" />
-                              <TextField fx:id="seriesCurrentPageField" layoutX="154.0" prefHeight="26.0" prefWidth="80.0" text="1" />
-                           </children>
-                        </Group>
+                        <Group layoutX="677.0" layoutY="341.0" />
                      </children>
                   </Group>
                   <Group layoutX="14.0" layoutY="401.0">
                      <children>
                         <TextField fx:id="seriesNameField" layoutY="17.0" prefHeight="25.0" prefWidth="300.0" />
                         <Label text="Name" />
-                        <Button fx:id="seriesChangeNameButton" layoutX="190.0" layoutY="43.0" mnemonicParsing="false" text="Change Name" />
+                        <Button fx:id="seriesChangeNameButton" layoutX="190.0" layoutY="43.0" mnemonicParsing="false" onAction="#updateSeries" text="Change Name" />
                      </children>
                   </Group>
                   <Group layoutX="14.0" layoutY="469.0">
@@ -450,12 +436,11 @@
                      <children>
                         <TableView fx:id="seriesProceedingTable" layoutY="16.0" prefHeight="280.0" prefWidth="656.0">
                            <columns>
-                              <TableColumn prefWidth="450.0" text="Title" />
-                              <TableColumn minWidth="0.0" prefWidth="199.0" text="Conference" />
+                              <TableColumn fx:id="seriesPubsTitleColumn" prefWidth="655.0" text="Title" />
                            </columns>
                         </TableView>
-                        <Label text="Proceedings" />
-                        <Button fx:id="seriesRemoveProceedingButton" layoutX="507.0" layoutY="296.0" mnemonicParsing="false" text="Remove Proceeding" />
+                        <Label text="Publications" />
+                        <Button fx:id="seriesRemoveProceedingButton" layoutX="507.0" layoutY="296.0" mnemonicParsing="false" onAction="#updateSeries" text="Remove Proceeding" />
                      </children>
                   </Group>
                </children>
